--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -120,14 +120,14 @@ body {
     margin-right: 6px;
 }
 
-.activities-table-wrapper {
-    overflow-x: auto;
+.activity-table-scroll {
     width: 100%;
+    overflow-x: auto;
 }
 
-.activities-table,
-.activities-table th,
-.activities-table td {
+.activity-table-nowrap,
+.activity-table-nowrap th,
+.activity-table-nowrap td {
     white-space: nowrap;
     vertical-align: middle;
 }
